--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <div class="nav-container">
             <div class="nav-brand">
                 <i class="fas fa-camera"></i>
-                <span>PhotoNexus</span>
+                <span>Showcat</span>
             </div>
             
             <div class="nav-menu" id="navMenu">
